--- a/src/package.json
+++ b/src/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "d3": "^7.9.0",
     "http-proxy-middleware": "^3.0.0",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
