--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
     "http-proxy-middleware": "^3.0.0",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
